kubernetes/chromadb-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-chromadb-service
  namespace: enterprise-ai

spec:
  selector:
    app: enterprise-chromadb

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
