kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-frontend-service
  namespace: enterprise-ai

spec:
  selector:
    app: enterprise-frontend

  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173

  type: NodePort
