kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-postgres-service
  namespace: enterprise-ai

spec:
  selector:
    app: enterprise-postgres

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
