kubernetes/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: enterprise-redis-service
  namespace: enterprise-ai

spec:
  selector:
    app: enterprise-redis

  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

  type: ClusterIP
